# real-estate-data-pipeline

./: .gitignore  LICENSE  PLAN.md  README.md  conftest.py  package_lambda.sh  pyproject.toml
.claude/: CLAUDE.md
.github/workflows/: ci.yml
airflow/dags/: real_estate_pipeline.py
docs/: design_decisions.md  rentcast_listings_api.md  rentcast_market_api.md  rentcast_property_api.md  rentcast_valuation_api.md
docs/rentcast_response_examples/: rentcast_property_data.json  rentcast_property_listing.json  rentcast_property_market.json
inspect/: inspection.ipynb  pyproject.toml
lambdas/common/: constants.py  utils.py
lambdas/ingest_kaggle/: handler.py  requirements.txt  test_local.py
lambdas/ingest_rentcast/: handler.py  test_local.py
lambdas/load/: handler.py  requirements.txt
lambdas/transform/: kaggle.py  requirements.txt  test_local.py  utils.py
lambdas/transform_kaggle/: handler.py  kaggle.py  requirements.txt  test_local.py
lambdas/transform_rentcast/: handler.py  rentcast.py  requirements.txt  test_local.py
plans/: plan_phase0.md  plan_phase1_step1.md
scripts/: attach_iam_policy.sh  package_lambda.sh  sync_dags.sh  update_iam_policy.sh
snowflake/: bootstrap.sql  grants.sql  s3_storage_integration.sql
snowflake/queries/: analytics.sql
snowflake/schemas/: dimensions.sql  facts.sql  metadata.sql  staging.sql
snowflake/views/: analytics_view.sql
terraform/: backend.tf  main.tf  outputs.tf  provider.tf  variables.tf
terraform/modules/s3/: main.tf  (+1 more)
tests/: test_ingest_kaggle.py  test_ingest_rentcast.py  test_load.py  test_transform_kaggle.py  test_transform_rentcast.py  test_transform_utils.py
(+13 files in other folders)
