[project]       
name = "real-estate-data-pipeline"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pytest>=9.0.2",
    "ruff>=0.15.5",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy",
    "types-requests",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
explicit_package_bases = true
exclude = ["lambdas/.*/package/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
